Add context
Signed-off-by: Vijayan Balasubramanian <balasvij@amazon.com>